--- a/WordGarden/Base.lproj/Main.storyboard
+++ b/WordGarden/Base.lproj/Main.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -66,7 +68,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_ _ _ _ _" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fww-GU-ax5">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fww-GU-ax5">
                                 <rect key="frame" x="16" y="131" width="288" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="UNc-KL-xUu"/>
@@ -91,7 +93,7 @@
                                             <action selector="guessedLetterFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="6r5-yq-A8x"/>
                                         </connections>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftm-JH-Ti0">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftm-JH-Ti0">
                                         <rect key="frame" x="48" y="0.0" width="150" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="WSu-Eb-Mb5"/>
@@ -104,7 +106,7 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4xW-1x-0dZ">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4xW-1x-0dZ">
                                 <rect key="frame" x="115" y="198" width="90" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="WWv-wu-1ba"/>
@@ -125,7 +127,8 @@
                                 <rect key="frame" x="0.0" y="264.5" width="320" height="303.5"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="z9k-5C-pRb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="9iF-UX-smZ"/>
                             <constraint firstItem="QZt-0g-PTu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ebg-RW-8bU"/>
@@ -148,7 +151,6 @@
                             <constraint firstItem="z9k-5C-pRb" firstAttribute="top" secondItem="4xW-1x-0dZ" secondAttribute="bottom" constant="8" id="wSv-JJ-mKP"/>
                             <constraint firstItem="bO2-mf-6V9" firstAttribute="top" secondItem="N2H-mi-ok4" secondAttribute="bottom" constant="8" id="xiL-mS-xzV"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="flowerImageView" destination="QZt-0g-PTu" id="JQ2-hn-a9V"/>
@@ -158,7 +160,7 @@
                         <outlet property="playAgainButton" destination="4xW-1x-0dZ" id="OzE-Ij-ZrR"/>
                         <outlet property="wordsBeingRevealedLabel" destination="Fww-GU-ax5" id="XP5-Wb-Wyl"/>
                         <outlet property="wordsGuessedLabel" destination="lbC-1H-mpj" id="6AS-Dh-rE5"/>
-                        <outlet property="wordsInGame" destination="s5Q-WZ-9Gj" id="Ah2-AO-uas"/>
+                        <outlet property="wordsInGameLabel" destination="s5Q-WZ-9Gj" id="Ah2-AO-uas"/>
                         <outlet property="wordsMissedLabel" destination="uRU-XY-GRE" id="hq8-Z8-Z8G"/>
                         <outlet property="wordsRemainingLabel" destination="aSS-XO-9aW" id="12W-ZW-wT8"/>
                     </connections>
@@ -170,5 +172,8 @@
     </scenes>
     <resources>
         <image name="flower8" width="613.5" height="1082"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
